sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: not found: value getNombeValeurs
      if (i<getNombeValeurs-1){
            ^