sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i=0
  while (i<getNombreValeurs){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
      if (i>0){
        i=i+1
      }
    }else{
      if (i<getNombeValeurs-1){
        i=i+1
      }
    }
  }
}